# fraktal

./: BackgroundWorker.cpp  BackgroundWorker.h  CMakeLists.txt  Canvas.cpp  Canvas.h  ColorScheme.cpp  ColorScheme.h  MainWindow.cpp  MainWindow.h  Point.h  RenderParams.h  Wrapper.h  ZoomRegion.h  fractal-viewer.kdev4  fractal-viewerui.rc  main.cpp  readme.md
.kdev4/: fractal-viewer.kdev4
